# inet_tcp_proxy

./: .gitignore  .travis.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  rebar.config
.github/workflows/: test.yaml
src/: inet_proxy_dist.erl  inet_tcp_proxy.app.src  inet_tcp_proxy.erl  inet_tcp_proxy_dist.app.src  inet_tcp_proxy_dist.erl  inet_tcp_proxy_dist_app.erl  inet_tcp_proxy_dist_conn_sup.erl  inet_tcp_proxy_dist_controller.erl  inet_tcp_proxy_dist_sup.erl  inet_tcp_proxy_manager.erl
test/: proxy_dist_SUITE.erl  proxy_dist_test_lib.erl  proxy_dist_test_lib.hrl
